<resources>
    <string name="app_name">SmartPromos</string>

    <string name="app_id">203924606624016</string>

    <string name="gmaps_id">AIzaSyAdwTFcIkFBA8rDcg-rvQzagKSBf2PmABE</string>

    <string name="snack_alert_no_connection">Sem conexao com a internet. Por favor, verifique se seu wi-fi ou seu 3g.</string>
    <string name="snack_alert_no_location">Por favor, ative o seu GPS ou a sua localização!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Fim -->

    <!-- Strings Title -->
    <string name="txt_ajuda">Precisa de ajuda?</string>

    <string name="txt_recuperar_senha">Recuperar senha</string>
    <string name="txt_escolher_licalizacao">Meu Local</string>
    <string name="txt_cadastro">Seus Dados</string>

    <string name="txt_register_title">Ainda não tem cadastro?</string>
    <string name="txt_register_sub">Toque aqui para criar</string>

    <string name="txt_remember_title">Esqueceu sua senha?</string>
    <string name="txt_remember_sub">Toque aqui para recuperar</string>

    <string name="txt_gender">Gênero</string>
    <string name="txt_type_locale">Tipo da sua localização</string>

    <string name="txt_sales">Ofertas</string>
    <string name="txt_coupons">Meus Cupons</string>
    <string name="txt_profile">Meus Dados</string>
    <string name="txt_locale">Minha Localização</string>
    <string name="txt_search_sales">Buscar Ofertas</string>
    <string name="txt_canceled_coupons">Cancelados</string>
    <string name="txt_sync">Sincronizar</string>
    <string name="txt_tutorial">Tutorial</string>
    <string name="txt_settings">Configurações</string>

    <string name="txt_no_sales_received">Não encontramos nenhuma nova oferta.</string>
    <string name="txt_no_sales_requested">Você ainda não solicitou nenhuma oferta.</string>
    <string name="txt_no_more_sales_requested">Carregamos todas as solicitações.</string>
    <string name="txt_no_sales_discarded">Não encontramos nenhum cupon com essa opção.</string>
    <string name="txt_no_coupons_found">Não encontramos nenhum cupon com essa opção.</string>
    <string name="txt_no_more_coupons_found">Carregamos todo os cupons disponíveis.</string>

    <string name="txt_sync_note">Digite seu cpf e senha do portal Nota Fiscal Paulista</string>
    <string name="txt_sync_note_plus">* Seus dados não serão gravados em nosso sistema</string>

    <string name="txt_conectado">Manter Conectado</string>
    <string name="txt_raio">Escolha o raio para suas buscas</string>
    <string name="txt_privacidade">Privacidade para receber ofertas</string>

    <string name="txt_receber_todas">Receber ofertas de todas as empresas</string>
    <string name="txt_receber_solicitei">Apenas empresas que já solicitei e recebi ofertas</string>
    <string name="txt_receber_comprei">Apenas empresas que já comprei</string>

    <string name="txt_use_coupon_title">Utilizar Cupom</string>
    <string name="txt_use_coupon_desc">Por favor, digite o código de confirmação.</string>
    <!-- Fim -->

    <!-- Strings EditText -->
    <string name="edt_login">Digite seu e-mail</string>
    <string name="edt_password">Digite sua senha</string>
    <string name="edt_nome">Digite seu nome</string>
    <string name="edt_sobrenome">Digite seu sobrenome</string>
    <string name="edt_telefone">Digite seu telefone</string>
    <string name="edt_email">Digite seu e-mail</string>
    <string name="edt_cpf">Seu cpf, apenas números</string>
    <string name="edt_data_nascimento">Data de nascimento dd/mm/aaaa</string>
    <string name="edt_conf_password">Confirme sua senha</string>
    <string name="edt_change_local">Digite seu endereço</string>

    <string name="edt_cep">Seu Cep</string>
    <string name="edt_endereco">Seu Endereço</string>
    <string name="edt_numero">Nº da sua localização</string>
    <string name="edt_bairro">Seu Bairro</string>
    <string name="edt_cidade">Sua Cidade</string>
    <string name="edt_estado">Seu Estado</string>

    <string name="edt_use_coupon">Insira o código</string>
    <!-- Fim -->

    <!-- Strings Btns -->
    <string name="btn_login">Entrar</string>
    <string name="btn_login_facebook">Entrar com o Facebook</string>
    <string name="btn_register">Criar Cadastro</string>
    <string name="btn_update">Atualizar Cadastro</string>
    <string name="btn_update_locale">Atualizar Localização</string>
    <string name="btn_reset_pass">Recuperar Senha</string>
    <string name="btn_conf_local">Confirmar</string>
    <string name="btn_alt_local">Alterar</string>
    <string name="btn_alt_local_search">Alterar Localização</string>
    <string name="btn_alt_place_search">Localizar Estabelecimento</string>
    <string name="btn_close">Fechar</string>
    <string name="btn_solicitar">Solicitar Promoção</string>

    <string name="btn_received">Recebidas</string>
    <string name="btn_requested">Solicitadas</string>
    <string name="btn_discarded">Descartadas</string>

    <string name="btn_sales">Ofertas</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_my_coupons">Meus Cupons</string>
    <string name="btn_sync">Sincronizar</string>
    <string name="btn_save">Salvar</string>

    <!-- Fim -->

    <!-- Strings Menus -->
    <string name="action_list_spending">Listar Gastos</string>
    <string name="action_settings">Configurações</string>

    <string name="action_filter">Filtrar Cupons</string>
    <string name="action_search">Buscar Empresas</string>
    <string name="action_home">Voltar aos cupons</string>

    <string name="action_oder_by_expired_desc">Expiram primeiro</string>
    <string name="action_oder_by_expired_asc">Expiram por último</string>
    <string name="action_oder_by_nome_asc">Alfabética A-Z</string>
    <string name="action_oder_by_nome_desc">Alfabética Z-A</string>

    <string name="main_profile">Meus dados</string>
    <string name="main_locale">Minha localização</string>

    <string name="main_sales">Ofertas recebidas</string>
    <string name="main_request">Ofertas solicitadas</string>
    <string name="main_discarded">Ofertas descartadas</string>
    <string name="main_sales_search">Buscar ofertas</string>

    <string name="main_my_coupons">Meus cupons</string>
    <string name="main_my_coupons_used">Cupons usados</string>
    <string name="main_my_coupons_expired">Cupons expirados</string>
    <string name="main_coupons_canceled">Cupons cancelados</string>

    <string name="main_sync">Sincronizar notas</string>
    <string name="main_tutorial">Tutorial</string>

    <string name="main_logout">Sair</string>
    <!-- Fim -->

</resources>
