<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_transparent_grey"
    android:id="@+id/containerHelp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/container"
        android:background="@drawable/rounded_style_white"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txtTitlePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_title"
            style="@style/TextHelpLogin"
            android:clickable="true"/>

        <TextView
            android:id="@+id/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_register_sub"
            android:layout_below="@+id/txtTitleRegister"
            android:clickable="true"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/edtPass"
            android:layout_marginTop="15dp"
            android:text="@string/btn_solicitar"
            style="@style/TextInputPattern"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/rounded_btn_green"/>

    </LinearLayout>


</RelativeLayout>