<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.smartpromos.ui.activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_transparent_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MarginPattern">

            <RelativeLayout
                android:id="@+id/containerFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MarginPattern"
                android:background="@drawable/rounded_style_white">

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:hint="@string/edt_nome"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/edtSobreNome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/edtNome"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:hint="@string/edt_sobrenome"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/edtSobreNome"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/edt_email"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/edtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/edtEmail"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    android:hint="@string/edt_cpf"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/edtDataNasc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/edtCpf"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:hint="@string/edt_data_nascimento"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textAlignment="textStart"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:id="@+id/containerGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/edtDataNasc"
                    android:gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edt_border">

                    <Spinner
                        android:id="@+id/spinnerGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true">
                    </Spinner>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/containerLocale"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/containerGender"
                    android:gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edt_border">

                    <Spinner
                        android:id="@+id/spinnerLocale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true">
                    </Spinner>

                </RelativeLayout>

                <EditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/containerLocale"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/edt_password"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>


                <EditText
                    android:id="@+id/edtConfPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/edtPass"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/edt_conf_password"
                    style="@style/TextInputPattern"
                    android:background="@drawable/edt_border"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/containerFields"
                android:layout_marginTop="20dp"
                android:text="@string/btn_register"
                style="@style/TextInputPattern"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/rounded_btn_green_hover"/>

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/toolbar_app"></include>

</RelativeLayout>
