<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.smartpromos.ui.fragment.SalesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_transparent_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/containerButtonsTop"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <Button
                    android:id="@+id/btnReceived"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_received"
                    android:background="@drawable/btn_green"
                    style="@style/TextBtnNavigatePattern"
                    android:enabled="true"/>

                <Button
                    android:id="@+id/btnRequested"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_requested"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/btn_green"
                    style="@style/TextBtnNavigatePattern"
                    android:textColor="@color/colorBlack"
                    android:enabled="false"/>


                <Button
                    android:id="@+id/btnDiscarded"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_discarded"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/btn_green"
                    style="@style/TextBtnNavigatePattern"
                    android:textColor="@color/colorBlack"
                    android:enabled="false"/>

            </LinearLayout>

        </RelativeLayout>



    </ScrollView>

</FrameLayout>
